--- a/main.css
+++ b/main.css
@@ -1,5 +1,21 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  background-color: #E0F2F7;
+}
+
+.header {
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  
+}
+
 * {
   box-sizing: border-box;
+}
+
+.display-container .content .wide {
+  max-width: 1500px;
 }
 
 .model1 {
@@ -8,7 +24,7 @@
   width: 33%;
   padding: 10px;
   height: 100vh;
-  border: dotted black;
+  border: solid black;
 }
 
 .model2 {
@@ -17,7 +33,7 @@
   width: 33%;
   padding: 10px;
   height: 100vh;
-  border: dotted deepskyblue;
+  border: solid black;
   ;
 }
 
@@ -27,7 +43,7 @@
   width: 33%;
   padding: 10px;
   height: 100vh;
-  border: dotted red;
+  border: solid black;
 }
 
 .row:after {
@@ -39,7 +55,7 @@
 @media only screen and (max-width: 600px) {
   .model1 {
     display: block;
-    width: atuo;
+    width: auto;
   }
 
   .model2 {
