--- a/Style.css
+++ b/Style.css
@@ -10,6 +10,17 @@ body{
     right: 0px;
     top: 0px;
     bottom: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.ListContainer {
+    position :relative;
+    width: 80%;
+    height:100%;
+    left: 4%;
+    top:15px
 }
 
 #div.background {
